--- a/src/global.css
+++ b/src/global.css
@@ -6,5 +6,27 @@
   font-family: 'Inter', 'sans-serif';
   font-weight: 400;
   font-size: 1rem;
+
+  --bg:#1E1E1E;
+  
+  --gray-700: #0D0D0D;
+  --gray-600: #1A1A1A;
+  --gray-500: #262626;
+  --gray-400: #333333;
+  --gray-300: #808080;
+  --gray-200: #D9D9D9;
+  --gray-100: #F2F2F2;
+
+  --blue-dark: #1E6F9F;
+  --blue: #4EA8DE;
+  --purple-dark: #5E60CE;
+  --purple: #8284FA;
+
+  --danger: #E25858;
 }
 
+
+
+body {
+  background-color: var(--bg)
+}
